plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

ext {
    springCloudVersion = "2024.0.1"
}


//Config Common
allprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.roomx'
    version = '0.0.1'

    repositories {
        mavenCentral()
    }

    dependencies {

        implementation('org.springframework.boot:spring-boot-starter-web')

        compileOnly 'org.projectlombok:lombok'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        implementation "org.springframework.boot:spring-boot-starter-actuator"
        implementation "org.springframework.boot:spring-boot-starter-aop"
        implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
        implementation 'com.alibaba.fastjson2:fastjson2:2.0.53'

        testImplementation 'org.springframework.security:spring-security-test'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

//        implementation 'org.hibernate.orm:hibernate-core:6.6.8.Final'


        /*implementation 'org.mapstruct:mapstruct:1.5.5.Final'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'*/
        implementation 'org.mapstruct:mapstruct:1.6.3'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

        runtimeOnly 'org.postgresql:postgresql'

//        implementation 'org.flywaydb:flyway-core'
        implementation("org.flywaydb:flyway-database-postgresql")

        implementation 'io.minio:minio:8.5.17'


        //WEB SOCKET

//        implementation 'org.springframework.boot:spring-boot-starter-websocket'


        //FIREBASE

        implementation 'com.google.firebase:firebase-admin:9.4.3'


        //LOG OBSER
        runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
        implementation 'com.github.loki4j:loki-logback-appender:1.6.0'
        implementation 'io.micrometer:micrometer-tracing-bridge-otel'
        implementation 'io.opentelemetry:opentelemetry-exporter-otlp'





    }


    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    tasks.named('bootJar') {
        mainClass = 'com.roomx.start.StartApplication'
    }
}

//root project
dependencies {


    implementation project(':start')


}

//Start Module
project(':start') {
    dependencies {
        implementation project(':controller')

        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    }


}

//shared Module
project(':shared') {
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    }
}


//Controller Module
project(':controller') {
    dependencies {
        implementation project(':application')
        implementation project(':shared')
        //swagger openapi
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'

        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    }
}


//Application Module
project(':application') {
    dependencies {
        implementation project(':shared')
        implementation project(':domain')
        implementation project(':infrastructure')
        implementation 'org.keycloak:keycloak-admin-client:26.0.4'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'



        //KAFKA
        testImplementation 'org.springframework.kafka:spring-kafka-test'
        implementation 'org.springframework.kafka:spring-kafka'
    }
}


//Infrastructure Module
project(':infrastructure') {
    dependencies {
        implementation project(':shared')
        implementation project(':domain')

        implementation 'org.keycloak:keycloak-spring-boot-starter:25.0.3'

        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.keycloak:keycloak-admin-client:26.0.4'
        runtimeOnly 'org.postgresql:postgresql'

//        implementation 'org.flywaydb:flyway-core'
        implementation("org.flywaydb:flyway-database-postgresql")

        implementation 'org.redisson:redisson:3.42.0'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        implementation 'io.minio:minio:8.5.17'


        testImplementation 'org.springframework.kafka:spring-kafka-test'
        implementation 'org.springframework.kafka:spring-kafka'

        implementation 'org.springframework.boot:spring-boot-starter-quartz'

        implementation 'org.springframework.boot:spring-boot-starter-mail'
        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    }
}


//Domain Module
project(':domain') {
    dependencies {
        implementation project(':shared')

    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}





